<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.jade.fisher.ui.FishActivity" >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/searchEditText"
        android:background="@color/colorTextIcons"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10.27dp"
        android:padding="6.7dp"
        android:hint="search" />

    <TextView
        android:id="@+id/searchTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchEditText"
        android:layout_marginLeft="15dp" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:layout_toRightOf="@id/searchEditText"
        android:drawableLeft="@android:drawable/ic_menu_search" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="585dp"
        android:layout_below="@+id/searchTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:textColor="@color/colorTextIcons" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:visibility="gone" />

</RelativeLayout>